# HRM

./: pass_at_k.py  pretrain.py  pyproject.toml  setup_experiments.sh
config/: cfg_pretrain.yaml
dataset/: build_arc_dataset.py
experiments/: EXPERIMENT_PLAN.md  MULTI_GPU_SETUP.md  README.md  __init__.py  evaluate_checkpoints.py  prepare_data.py  run_experiments.py
experiments/configs/: ablation_augmentation.yaml  baseline_replication.yaml  step_0_pipeline_test.yaml
experiments/configs/arch/: hrm_1x1.yaml  hrm_no_act.yaml  hrm_no_puzzle_emb.yaml  hrm_small.yaml  hrm_standard_transformer.yaml
models/: layers.py  losses.py  sparse_embedding.py
models/hrm/: hrm_act_v1.py
