[project]
name = "hrm"
version = "0.1.0"
description = "Hierarchical Reasoning Model"
requires-python = ">=3.8.10"
dependencies = [
    "torch>=2.0.0",
    # "adam-atan2>=0.0.3",  # Replaced with standard AdamW optimizer
    "einops>=0.6.0",
    "tqdm>=4.65.0",
    "coolname>=2.2.0",
    "pydantic>=2.0.0",
    "argdantic>=0.3.0",
    "wandb>=0.15.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "huggingface_hub>=0.16.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "packaging>=23.0",
    "ninja>=1.11.0",
    "wheel>=0.40.0",
    "setuptools>=68.0",
    "setuptools-scm>=7.1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["models", "dataset", "utils"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ipython>=8.10.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.html", "*.js"]